<resources>
    <string name="app_name">MonitorNFC</string>
    <string name="connect">接続</string>
    <string name="connecting">接続中</string>
    <string name="disconnect">切断</string>
    <string name="monitoring_stop_jp">監視停止中</string>
    <string name="id_detected_jp">社員証検出中</string>
    <string name="id_not_detected_jp">社員証未検出</string>
    <string name="wifi_not_found">通知停止SSID未検出</string>
    <string name="wifi_found">通知停止SSID検出中</string>
    <string name="add">追加</string>
    <string name="del">削除</string>
    <string name="ssid_list">監視対象外SSIDリスト</string>
    <string name="include_time">紛失監視時間</string>
    <string name="include_start_time">紛失監視開始時間</string>
    <string name="include_end_time">紛失監視終了時間</string>
    <string name="exclude_time">持出監視時間</string>
    <string name="exclude_start_time">持出監視開始時間</string>
    <string name="exclude_end_time">持出監視終了時間</string>
    <string name="sun">日</string>
    <string name="mon">月</string>
    <string name="tue">火</string>
    <string name="wed">水</string>
    <string name="thu">木</string>
    <string name="fri">金</string>
    <string name="sat">土</string>
    <string name="tilde">～</string>
    <string name="set_monitoring_time">監視時間設定</string>

    <string name="ble_not_supported">BLE is not supported.</string>
</resources>
